remove fixed in scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,3 @@
 .Toastify div {
   z-index: 9999999;
 }
-
-.ps__thumbs-y {
-  position: fixed !important;
-}
-
-.ps__thumbs-x {
-  position: fixed !important;
-}
